--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300&display=swap" rel="stylesheet">
-<link rel="shortcut icon" href="images/fav1-modified.png" type="image/x-icon">
+<link rel="shortcut icon" href="images/favicon-modified.png" type="image/x-icon">
   </head>
   <body>
     <header>
@@ -40,9 +40,6 @@
                     class="" /></a>
             </div>
           </div></li>
-          <div class="bubble">
-  
-          </div>
         </ul>
       </nav>
     </header>
