--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
      
       
         <h5 class="answer1">
-        Additionally, SweetCone owners have access to the community of sweetCone NFT owners that allows them to interact with one another.
+        SweetCone owners have access to the community of sweetCone NFT owners that allows them to interact with one another.
       </h5>
         <h5 class="answer1">
           <br>
